--- a/ChessKing/Properties/Resources.resx
+++ b/ChessKing/Properties/Resources.resx
@@ -133,4 +133,7 @@
   <data name="FlashScreen" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\FlashScreen.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Chess_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Chess-icon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
